--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-image: url('/src/img/R.gif');
+  background-image: url('/src/img/code.gif');
   background-repeat: no-repeat;
   background-size: 100%;
 
